--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-	<header class="header">
+	<!-- <header class="header">
 		<div class="header__row">
 			<h1 class="logo"><a href="#"><span class="a11y">풀무원</span></a></h1>
 			<nav class="gnb">
@@ -43,18 +43,38 @@
 				</div>
 			</div>
 		</div>
-	</header>
+	</header> -->
+	<style>
+		.dummy {
+			position: fixed;
+			left: 0;
+			top: 0;
+			z-index: 100;
+			width: 100%;
+			height: min(7.08vw, 137px);
+		}
+
+		@media screen and (max-width: 768px) {
+			.dummy {
+				height: 15vw;
+				border-bottom: 1px solid #E7E7E7;
+			}
+		}
+	</style>
+	<div class="dummy">
+		<img src=" ./assets/images/dummy/@header.png" alt="" style="width: 100%; height: 100%;">
+	</div>
 
 	<article class="kv">
 		<div class="kv__sticky">
 			<div class="kv__container">
 				<div class="wraping">
+					<span class="anniversary">
+						<span class="a11y">40th ANNIVERSARY FRESH MARKET</span>
+					</span>
 					<h2 class="kv__title">
-						Pulmuone
-						<span class="anniversary">
-							<span class="a11y">40th ANNIVERSARY FRESH MARKET</span>
-						</span>
-						Anniversary
+						풀무원 40년<br>
+						바른먹거리 40년
 					</h2>
 					<p class="kv__desc">풀무원의 40년, 이웃사랑과 생명존중의 가치를 실천하고 있습니다.</p>
 				</div>
@@ -77,6 +97,7 @@
 							<div class="swiper-slide swiper-no-swiping roundBox"><img src="./assets/images/img_kv_banner02_04.jpg" alt=""></div>
 							<div class="swiper-slide swiper-no-swiping roundBox"><img src="./assets/images/img_kv_banner02_05.jpg" alt=""></div>
 							<div class="swiper-slide swiper-no-swiping roundBox"><img src="./assets/images/img_kv_banner02_06.jpg" alt=""></div>
+							<div class="swiper-slide swiper-no-swiping roundBox"><img src="./assets/images/img_kv_banner02_07.jpg" alt=""></div>
 						</div>
 					</div>
 				</div>
@@ -107,19 +128,19 @@
 			<div class="prologue__container">
 				<div class="prologue__circle">
 					<div class="prologue__people"></div>
+					<div class="prologue__group">
+						<p class="prologue__title">
+							조금 더 나은 세상을 향한<br>
+							풀무원의 <strong>40년의 여정</strong>
+						</p>
+						<div class="button">
+							<a href="#" class="button__item button__item--primary">40주년 여정 확인하기</a>
+						</div>
+					</div>
 				</div>
 				<span class="anniversary">
 					<span class="a11y">40th ANNIVERSARY FRESH MARKET</span>
 				</span>
-				<div class="prologue__group">
-					<p class="prologue__title">
-						조금 더 나은 세상을 향한<br>
-						풀무원의 <strong>40년의 여정</strong>
-					</p>
-					<div class="button">
-						<a href="#" class="button__item button__item--primary">40주년 여정 확인하기</a>
-					</div>
-				</div>
 			</div>
 		</div>
 		<div class="prologue__scroll"></div>
@@ -183,25 +204,27 @@
 					<p class="desc">&lsquo;이웃사랑&rsquo;과 &lsquo;생명존중&rsquo; 정신을 바탕으로 로하스 생활(LOHAS Living)을 구현해나갑니다.</p>
 				</header>
 				<div class="card">
-					<div class="card__row">
-						<article class="card__item roundBox">
-							<h4 class="card__title">사회책임경영</h4>
-							<p class="card__category">LOHAS Strategy</p>
-							<p class="card__desc">풀무원은 경제적 사회적 환경적 가치 창출을 풀무원의 사회적책임으로 정의하고 끊임없는 혁신을 통해 공유가치를 창출함으로써 지속가능한 성장을 도모하겠습니다.</p>
-							<div class="lottie"></div>
-						</article>
-						<article class="card__item roundBox">
-							<h4 class="card__title">활동과 실적</h4>
-							<p class="card__category">Value Creation Process</p>
-							<p class="card__desc">풀무원은 사회책임경영을 통해 &lsquo;글로벌 No.1 기업&rsquo;으로 도약하겠습니다.</p>
-							<div class="lottie"></div>
-						</article>
-						<article class="card__item roundBox">
-							<h4 class="card__title">성과</h4>
-							<p class="card__category">Sustainable Development Goals</p>
-							<p class="card__desc">풀무원은 사회책임경영을 통해 &lsquo;글로벌 No.1 기업&rsquo;으로 도약하겠습니다.</p>
-							<div class="lottie"></div>
-						</article>
+					<div class="card__scroll">
+						<div class="card__row">
+							<article class="card__item roundBox">
+								<h4 class="card__title">사회책임경영</h4>
+								<p class="card__category">LOHAS Strategy</p>
+								<p class="card__desc">풀무원은 경제적 사회적 환경적 가치 창출을 풀무원의 사회적책임으로 정의하고 끊임없는 혁신을 통해 공유가치를 창출함으로써 지속가능한 성장을 도모하겠습니다.</p>
+								<div class="lottie"></div>
+							</article>
+							<article class="card__item roundBox">
+								<h4 class="card__title">활동과 실적</h4>
+								<p class="card__category">Value Creation Process</p>
+								<p class="card__desc">풀무원은 사회책임경영을 통해 &lsquo;글로벌 No.1 기업&rsquo;으로 도약하겠습니다.</p>
+								<div class="lottie"></div>
+							</article>
+							<article class="card__item roundBox">
+								<h4 class="card__title">성과</h4>
+								<p class="card__category">Sustainable Development Goals</p>
+								<p class="card__desc">풀무원은 사회책임경영을 통해 &lsquo;글로벌 No.1 기업&rsquo;으로 도약하겠습니다.</p>
+								<div class="lottie"></div>
+							</article>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -249,6 +272,9 @@
 										<p class="list__desc">어류, 해산물 원료를 주원료로 사용한 식품으로 ASC/MSC 인증 원료를 사용합니다.</p>
 									</li>
 								</ul>
+								<div class="button">
+									<a href="#" class="button__item button__item--secondary">지속가능식품 더 알아보기</a>
+								</div>
 							</div>
 						</div>
 						<div class="swiper-slide coverflow__item">
@@ -273,6 +299,9 @@
 										<p class="list__desc">건강과 환경을 위해 풀무원은 &lsquo;지속가능 식생활 모델&rsquo;을 제안합니다.</p>
 									</li>
 								</ul>
+								<div class="button">
+									<a href="#" class="button__item button__item--secondary">지속가능 식생활 더 알아보기</a>
+								</div>
 							</div>
 						</div>
 						<div class="swiper-slide coverflow__item">
@@ -297,6 +326,9 @@
 										<p class="list__desc">클린라벨을 통해 원료와 첨가물을 엄격하게 관리하고 투명하게 공개합니다.</p>
 									</li>
 								</ul>
+								<div class="button">
+									<a href="#" class="button__item button__item--secondary">바른먹거리 원칙 더 알아보기</a>
+								</div>
 							</div>
 						</div>
 						<div class="swiper-slide coverflow__item">
@@ -311,6 +343,9 @@
 										<p class="list__desc">어렸을 때 입맛이 평생 건강이 됩니다. 풀무원은 바른먹거리를 만드는 일 못지않게 바른 먹거리의 중요성을 널리 알리고 바른 식습관을 교육하는 일이 식품회사의 중요한 사회적 책임이라고 생각합니다. 2010년 초등학생을 대상으로 한 식품표시 교육에서부터 시작된 바른먹거리 캠페인은 이제 학부모와 교사들의 전폭적인 지지를 받으며 미취학아동, 초등학생, 성인, 시니어 교육으로까지 확대되고 있습니다. 또, 2015년부터는 &lsquo;건강에 좋은 것이 곧 환경에도 좋다&rsquo;는 풀무원의 지속가능 식생활 교육이 더해지면서 건강한 식문화 확산에 기여하고 있습니다.</p>
 									</li>
 								</ul>
+								<div class="button">
+									<a href="#" class="button__item button__item--secondary">바른먹거리 원칙 더 알아보기</a>
+								</div>
 							</div>
 						</div>
 						<div class="swiper-slide coverflow__item">
@@ -325,6 +360,9 @@
 										<p class="list__desc">풀무원은 식물성&middot;동물복지 식품을 핵심으로 하는 지속가능식품을 미래 성장동력으로 적극 육성하기 위해 지속가능식품 전문 브랜드 &lsquo;지구식단&rsquo;을 론칭하여 지속가능한 미래 먹거리 사업을 본격화하였습니다. 식물성 지향 식품 브랜드인 &lsquo;식물성 지구식단&rsquo;은 최소첨가물 원칙과 풀무원만의 노하우 및 특허기술을 활용하여 식물성 원료만으로 맛과 식감을 살린 제품을 선보인 브랜드입니다. 동물복지 원료를 사용한 제품을 기반으로 하는 &lsquo;동물복지 지구식단&rsquo;은 최소첨가물 원칙과 엄격한 동물복지 기준을 준수하여 건강한 맛을 구현하는 식품 브랜드입니다.</p>
 									</li>
 								</ul>
+								<div class="button">
+									<a href="#" class="button__item button__item--secondary">바른먹거리 원칙 더 알아보기</a>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -343,16 +381,9 @@
 									<img src="./assets/images/dummy/@board_img_big.jpg" alt="">
 								</div>
 								<div class="board__contents">
-									<span class="board__flag board__flag--green">지구식단</span>
 									<div class="board__group">
 										<p class="board__title">#이효리는 풀무원 지구식단합니다.</p>
-										<p class="board__desc">
-											“나는 오늘 뭘 먹을지가 인생 최대 고민인 것 같아.
-											먹을 때가 제일 행복한 건데 무조건 맛있는 거 먹고
-											싶고 몸에도 지구에도 좋았으면 하고 근데 그런 게
-											있더라 …?” 일상식단 그대로 식물성으로.
-											이효리는 풀무원지구식단 합니다.
-										</p>
+										<p class="board__desc">“나는 오늘 뭘 먹을지가 인생 최대 고민인 것 같아. 먹을 때가 제일 행복한 건데 무조건 맛있는 거 먹고 싶고 몸에도 지구에도 좋았으면 하고 근데 그런 게 있더라 …?” 일상식단 그대로 식물성으로.이효리는 풀무원지구식단 합니다.</p>
 									</div>
 									<span class="board__date">2023.04.27</span>
 								</div>
@@ -362,54 +393,9 @@
 									<img src="./assets/images/dummy/@board_img_big.jpg" alt="">
 								</div>
 								<div class="board__contents">
-									<span class="board__flag board__flag--skyblue">브랜드뉴스</span>
 									<div class="board__group">
-										<p class="board__title">#이효리는 풀무원 지구식단합니다.</p>
-										<p class="board__desc">
-											“나는 오늘 뭘 먹을지가 인생 최대 고민인 것 같아.
-											먹을 때가 제일 행복한 건데 무조건 맛있는 거 먹고
-											싶고 몸에도 지구에도 좋았으면 하고 근데 그런 게
-											있더라 …?” 일상식단 그대로 식물성으로.
-											이효리는 풀무원지구식단 합니다.
-										</p>
-									</div>
-									<span class="board__date">2023.04.27</span>
-								</div>
-							</div>
-							<div class="board__card roundBox">
-								<div class="board__img roundBox">
-									<img src="./assets/images/dummy/@board_img_big.jpg" alt="">
-								</div>
-								<div class="board__contents">
-									<span class="board__flag board__flag--lime">기업뉴스</span>
-									<div class="board__group">
-										<p class="board__title">#이효리는 풀무원 지구식단합니다.</p>
-										<p class="board__desc">
-											“나는 오늘 뭘 먹을지가 인생 최대 고민인 것 같아.
-											먹을 때가 제일 행복한 건데 무조건 맛있는 거 먹고
-											싶고 몸에도 지구에도 좋았으면 하고 근데 그런 게
-											있더라 …?” 일상식단 그대로 식물성으로.
-											이효리는 풀무원지구식단 합니다.
-										</p>
-									</div>
-									<span class="board__date">2023.04.27</span>
-								</div>
-							</div>
-							<div class="board__card roundBox">
-								<div class="board__img roundBox">
-									<img src="./assets/images/dummy/@board_img_big.jpg" alt="">
-								</div>
-								<div class="board__contents">
-									<span class="board__flag board__flag--orange">기획자료</span>
-									<div class="board__group">
-										<p class="board__title">#이효리는 풀무원 지구식단합니다.</p>
-										<p class="board__desc">
-											“나는 오늘 뭘 먹을지가 인생 최대 고민인 것 같아.
-											먹을 때가 제일 행복한 건데 무조건 맛있는 거 먹고
-											싶고 몸에도 지구에도 좋았으면 하고 근데 그런 게
-											있더라 …?” 일상식단 그대로 식물성으로.
-											이효리는 풀무원지구식단 합니다.
-										</p>
+										<p class="board__title">풀무원의 ESG경영23. 생물다양성 보존을 위한 풀무원의 발자국</p>
+										<p class="board__desc">우리에게는 생태계의 균형을 유지하고 생물다양성(Biodiversity)을 보존해야 할 의무와 책임이 있다. 풀무원도 ‘바른먹거리로 사람과 지구의 건강한 내일을 만드는 기업’이라는 미션 아래 그 책임을 다하기 위해 본격적으로 생물다양성 활동에 나섰다.</p>
 									</div>
 									<span class="board__date">2023.04.27</span>
 								</div>
@@ -500,7 +486,7 @@
 		</div>
 	</main>
 
-	<footer class="footer">
+	<!-- <footer class="footer">
 		<div class="footer__top">
 			<div class="wraping">
 				<div class="footer__row">
@@ -630,11 +616,22 @@
 				<p class="copyright">Copyright &copy; 2024 by Pulmuone Co. Ltd. All Rights Reserved</p>
 			</div>
 		</div>
-	</footer>
+	</footer> -->
+	<style>
+		.dummyfoo {
+			width: 100%;
+			height: min(18.23vw, 350px);
+		}
+
+		@media screen and (max-width: 768px) {
+			.dummyfoo {
+				height: 121.11vw;
+			}
+		}
+	</style>
+	<div class="dummyfoo">
+		<img src=" ./assets/images/dummy/@footer.png" alt="" style="width: 100%; height: 100%;">
+	</div>
 </body>
-
-<script>
-
-</script>
 
 </html>
