--- a/src/index.html
+++ b/src/index.html
@@ -210,19 +210,25 @@
 								<h4 class="card__title">사회책임경영</h4>
 								<p class="card__category">LOHAS Strategy</p>
 								<p class="card__desc">풀무원은 경제적 사회적 환경적 가치 창출을 풀무원의 사회적책임으로 정의하고 끊임없는 혁신을 통해 공유가치를 창출함으로써 지속가능한 성장을 도모하겠습니다.</p>
-								<div class="lottie"></div>
+								<div class="lottie">
+									<img src="./assets/images/dummy/@ecocaring01.png" alt="" style="width: 100%; height: 100%;">
+								</div>
 							</article>
 							<article class="card__item roundBox">
 								<h4 class="card__title">활동과 실적</h4>
 								<p class="card__category">Value Creation Process</p>
 								<p class="card__desc">풀무원은 사회책임경영을 통해 &lsquo;글로벌 No.1 기업&rsquo;으로 도약하겠습니다.</p>
-								<div class="lottie"></div>
+								<div class="lottie">
+									<img src="./assets/images/dummy/@ecocaring02.png" alt="" style="width: 100%; height: 100%;">
+								</div>
 							</article>
 							<article class="card__item roundBox">
 								<h4 class="card__title">성과</h4>
 								<p class="card__category">Sustainable Development Goals</p>
 								<p class="card__desc">풀무원은 사회책임경영을 통해 &lsquo;글로벌 No.1 기업&rsquo;으로 도약하겠습니다.</p>
-								<div class="lottie"></div>
+								<div class="lottie">
+									<img src="./assets/images/dummy/@ecocaring03.png" alt="" style="width: 100%; height: 100%;">
+								</div>
 							</article>
 						</div>
 					</div>
@@ -252,22 +258,30 @@
 								<p class="coverflow__desc">내 몸에도 지구 환경에도 좋은 Sustainable food</p>
 								<ul class="list">
 									<li class="list__item">
-										<div class="list__ico" style="background-color: pink;"></div>
+										<div class="list__img">
+											<img src="./assets/images/img_coverflow01_01.png" alt="">
+										</div>
 										<p class="list__title">순식물성 식품</p>
 										<p class="list__desc">식물성 원료로만 구성한 식품이며 동물성 원료를 식물성으로 완전 대체한 식물성 식품입니다.</p>
 									</li>
 									<li class="list__item">
-										<div class="list__ico" style="background-color: pink;"></div>
+										<div class="list__img">
+											<img src="./assets/images/img_coverflow01_02.png" alt="">
+										</div>
 										<p class="list__title">동물복지 식품</p>
 										<p class="list__desc">육류, 조류, 달걀을 주원료로 사용한 식품으로 동물복지 인증 원료를 사용합니다.</p>
 									</li>
 									<li class="list__item">
-										<div class="list__ico" style="background-color: pink;"></div>
+										<div class="list__img">
+											<img src="./assets/images/img_coverflow01_03.png" alt="">
+										</div>
 										<p class="list__title">식물성지향 신선간편조리식</p>
 										<p class="list__desc">식물성을 지향하고 일부 동물성 원료가 포함된 신선간편조리식 입니다.</p>
 									</li>
 									<li class="list__item">
-										<div class="list__ico" style="background-color: pink;"></div>
+										<div class="list__img">
+											<img src="./assets/images/img_coverflow01_04.png" alt="">
+										</div>
 										<p class="list__title">지속성 해산물 식품</p>
 										<p class="list__desc">어류, 해산물 원료를 주원료로 사용한 식품으로 ASC/MSC 인증 원료를 사용합니다.</p>
 									</li>
@@ -284,17 +298,23 @@
 								<p class="coverflow__desc">바른먹거리로 사람과 지구의 건강한 내일을 만드는 기업</p>
 								<ul class="list">
 									<li class="list__item">
-										<div class="list__ico" style="background-color: pink;"></div>
+										<div class="list__img">
+											<img src="./assets/images/img_coverflow02_01.png" alt="">
+										</div>
 										<p class="list__title">지엘(GL) 다이어트</p>
 										<p class="list__desc">정제된 탄수화물 섭취하여 혈당 수치를 조절하는 건강한 다이어트 식사법입니다.</p>
 									</li>
 									<li class="list__item">
-										<div class="list__ico" style="background-color: pink;"></div>
+										<div class="list__img">
+											<img src="./assets/images/img_coverflow02_02.png" alt="">
+										</div>
 										<p class="list__title">211 식사법</p>
 										<p class="list__desc">채소와 단백질, 통곡물을 2:1:1 비율로 섭취하는 균형잡힌 식사방법 입니다.</p>
 									</li>
 									<li class="list__item">
-										<div class="list__ico" style="background-color: pink;"></div>
+										<div class="list__img">
+											<img src="./assets/images/img_coverflow02_03.png" alt="">
+										</div>
 										<p class="list__title">지속가능 식생활 모델</p>
 										<p class="list__desc">건강과 환경을 위해 풀무원은 &lsquo;지속가능 식생활 모델&rsquo;을 제안합니다.</p>
 									</li>
@@ -311,17 +331,23 @@
 								<p class="coverflow__desc">나와 지구를 위한 풀무원 바른먹거리 원칙</p>
 								<ul class="list">
 									<li class="list__item">
-										<div class="list__ico" style="background-color: pink;"></div>
+										<div class="list__img">
+											<img src="./assets/images/img_coverflow03_01.png" alt="">
+										</div>
 										<p class="list__title">Nutrition Balance</p>
 										<p class="list__desc">영양균형을 고려한 식단을 지향하고, 제품을 만듭니다.</p>
 									</li>
 									<li class="list__item">
-										<div class="list__ico" style="background-color: pink;"></div>
+										<div class="list__img">
+											<img src="./assets/images/img_coverflow03_02.png" alt="">
+										</div>
 										<p class="list__title">Eco Caring</p>
 										<p class="list__desc">환경을 생각한 제조과정과 사업장 설계, 포장 원칙을 준수합니다.</p>
 									</li>
 									<li class="list__item">
-										<div class="list__ico" style="background-color: pink;"></div>
+										<div class="list__img">
+											<img src="./assets/images/img_coverflow03_03.png" alt="">
+										</div>
 										<p class="list__title">Clean Label</p>
 										<p class="list__desc">클린라벨을 통해 원료와 첨가물을 엄격하게 관리하고 투명하게 공개합니다.</p>
 									</li>
@@ -338,7 +364,9 @@
 								<p class="coverflow__desc">바른먹거리의 중요성</p>
 								<ul class="list">
 									<li class="list__item">
-										<div class="list__ico" style="background-color: pink;"></div>
+										<div class="list__img">
+											<img src="./assets/images/img_coverflow04_01.png" alt="">
+										</div>
 										<p class="list__title">Nutrition Balance</p>
 										<p class="list__desc">어렸을 때 입맛이 평생 건강이 됩니다. 풀무원은 바른먹거리를 만드는 일 못지않게 바른 먹거리의 중요성을 널리 알리고 바른 식습관을 교육하는 일이 식품회사의 중요한 사회적 책임이라고 생각합니다. 2010년 초등학생을 대상으로 한 식품표시 교육에서부터 시작된 바른먹거리 캠페인은 이제 학부모와 교사들의 전폭적인 지지를 받으며 미취학아동, 초등학생, 성인, 시니어 교육으로까지 확대되고 있습니다. 또, 2015년부터는 &lsquo;건강에 좋은 것이 곧 환경에도 좋다&rsquo;는 풀무원의 지속가능 식생활 교육이 더해지면서 건강한 식문화 확산에 기여하고 있습니다.</p>
 									</li>
@@ -355,7 +383,9 @@
 								<p class="coverflow__desc">더 많은 사람들이 더 맛있게 더 즐겁게</p>
 								<ul class="list">
 									<li class="list__item">
-										<div class="list__ico" style="background-color: pink;"></div>
+										<div class="list__img">
+											<img src="./assets/images/img_coverflow05_01.png" alt="">
+										</div>
 										<p class="list__title">Nutrition Balance</p>
 										<p class="list__desc">풀무원은 식물성&middot;동물복지 식품을 핵심으로 하는 지속가능식품을 미래 성장동력으로 적극 육성하기 위해 지속가능식품 전문 브랜드 &lsquo;지구식단&rsquo;을 론칭하여 지속가능한 미래 먹거리 사업을 본격화하였습니다. 식물성 지향 식품 브랜드인 &lsquo;식물성 지구식단&rsquo;은 최소첨가물 원칙과 풀무원만의 노하우 및 특허기술을 활용하여 식물성 원료만으로 맛과 식감을 살린 제품을 선보인 브랜드입니다. 동물복지 원료를 사용한 제품을 기반으로 하는 &lsquo;동물복지 지구식단&rsquo;은 최소첨가물 원칙과 엄격한 동물복지 기준을 준수하여 건강한 맛을 구현하는 식품 브랜드입니다.</p>
 									</li>
