--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 	<link rel="shortcut icon" href="https://www.pulmuone.co.kr/pulmuone/img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="./assets/css/pulmuone.css">
 	<script defer src="./assets/js/pulmuone.js"></script>
+	<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 
 <body>
@@ -211,7 +212,9 @@
 								<p class="card__category">LOHAS Strategy</p>
 								<p class="card__desc">풀무원은 경제적 사회적 환경적 가치 창출을 풀무원의 사회적책임으로 정의하고 끊임없는 혁신을 통해 공유가치를 창출함으로써 지속가능한 성장을 도모하겠습니다.</p>
 								<div class="lottie">
-									<img src="./assets/images/dummy/@ecocaring01.png" alt="" style="width: 100%; height: 100%;">
+									<lottie-player src="./assets/lottie/report.json" background="transparent" speed="1" loop autoplay>
+									</lottie-player>
+									<!-- <img src="./assets/images/dummy/@ecocaring01.png" alt="" style="width: 100%; height: 100%;"> -->
 								</div>
 							</article>
 							<article class="card__item roundBox">
@@ -219,7 +222,9 @@
 								<p class="card__category">Value Creation Process</p>
 								<p class="card__desc">풀무원은 사회책임경영을 통해 &lsquo;글로벌 No.1 기업&rsquo;으로 도약하겠습니다.</p>
 								<div class="lottie">
-									<img src="./assets/images/dummy/@ecocaring02.png" alt="" style="width: 100%; height: 100%;">
+									<lottie-player src="./assets/lottie/earth.json" background="transparent" speed="1" loop autoplay>
+									</lottie-player>
+									<!-- <img src="./assets/images/dummy/@ecocaring02.png" alt="" style="width: 100%; height: 100%;"> -->
 								</div>
 							</article>
 							<article class="card__item roundBox">
@@ -227,7 +232,9 @@
 								<p class="card__category">Sustainable Development Goals</p>
 								<p class="card__desc">풀무원은 사회책임경영을 통해 &lsquo;글로벌 No.1 기업&rsquo;으로 도약하겠습니다.</p>
 								<div class="lottie">
-									<img src="./assets/images/dummy/@ecocaring03.png" alt="" style="width: 100%; height: 100%;">
+									<lottie-player src="./assets/lottie/award.json" background="transparent" speed="1" loop autoplay>
+									</lottie-player>
+									<!-- <img src="./assets/images/dummy/@ecocaring03.png" alt="" style="width: 100%; height: 100%;"> -->
 								</div>
 							</article>
 						</div>
