바른먹거리 스와이퍼 임시 수정

--- a/src/index.html
+++ b/src/index.html
@@ -244,7 +244,7 @@
 			<section class="wraping">
 				<header class="wraping__header">
 					<h3 class="title">바른먹거리</h3>
-					<p class="desc">&lsquo;내 가족의 건강과 행복을 위한 바른먹거리&rsquo;를 위해 엄격한 원칙들을 스스로 만들어 지켜오고 있습니다.</p>
+					<p class="desc">&lsquo;가족의 건강과 행복을 위한 바른먹거리&rsquo;를 위해 스스로 세운 원칙들을 엄격히 지키고 있습니다. </p>
 				</header>
 				<div class="coverflow swiper">
 					<div class="swiper-wrapper">
@@ -252,8 +252,8 @@
 							<div class="coverflow__hero">
 								<div class="coverflow__inner">
 									<p>
-										풀무원을 만드는 사람들.<br>
-										<strong>바른 마음으로 바른먹거리를 생각합니다.</strong>
+										바른 마음으로 바른먹거리를.<br>
+										<strong>풀무원을 만드는 사람들.</strong>
 									</p>
 								</div>
 							</div>
@@ -262,31 +262,31 @@
 							<div class="coverflow__box">
 								<div class="coverflow__dimmed"></div>
 								<p class="coverflow__title">지속가능식품</p>
-								<p class="coverflow__desc">내 몸에도 지구 환경에도 좋은 Sustainable food</p>
+								<p class="coverflow__desc">내 몸과 지구 환경을 위한<br class="only__mobile"> 바른먹거리들</p>
 								<ul class="list">
 									<li class="list__item">
 										<div class="list__img"></div>
 										<p class="list__title">순식물성 식품</p>
-										<p class="list__desc">식물성 원료로만 구성한 식품이며 동물성 원료를 식물성으로 완전 대체한 식물성 식품입니다.</p>
+										<p class="list__desc">식물성 원료로만 구성한 식품이며 동물성 원료를<br class="only__pc"> 식물성으로 완전 대체한 식물성 식품입니다.</p>
 									</li>
 									<li class="list__item">
 										<div class="list__img"></div>
 										<p class="list__title">동물복지 식품</p>
-										<p class="list__desc">육류, 조류, 달걀을 주원료로 사용한 식품으로 동물복지 인증 원료를 사용합니다.</p>
+										<p class="list__desc">육류, 조류, 달걀을 주원료로 사용한 식품으로<br class="only__pc"> 동물복지 인증 원료를 사용합니다.</p>
 									</li>
 									<li class="list__item">
 										<div class="list__img"></div>
 										<p class="list__title">식물성지향 신선간편조리식</p>
-										<p class="list__desc">식물성을 지향하고 일부 동물성 원료가 포함된 신선간편조리식 입니다.</p>
+										<p class="list__desc">식물성을 지향하고 일부 동물성 원료가 포함된<br class="only__pc"> 신선간편조리식 입니다.</p>
 									</li>
 									<li class="list__item">
 										<div class="list__img"></div>
 										<p class="list__title">지속성 해산물 식품</p>
-										<p class="list__desc">어류, 해산물 원료를 주원료로 사용한 식품으로 ASC/MSC 인증 원료를 사용합니다.</p>
+										<p class="list__desc">어류, 해산물 원료를 주원료로 사용한 식품으로<br class="only__pc"> ASC/MSC 인증 원료를 사용합니다.</p>
 									</li>
 								</ul>
 								<div class="button">
-									<a href="#" class="button__item button__item--secondary">지속가능식품 더 알아보기</a>
+									<a href="#" class="button__item button__item--secondary">풀무원 정신 자세히 보기</a>
 								</div>
 							</div>
 						</div>
@@ -294,22 +294,22 @@
 							<div class="coverflow__box">
 								<div class="coverflow__dimmed"></div>
 								<p class="coverflow__title">지속가능 식생활</p>
-								<p class="coverflow__desc">바른먹거리로 사람과 지구의 건강한 내일을 만드는 기업</p>
+								<p class="coverflow__desc">더 바르게 더 건강하게<br class="only__mobile"> 먹는 비법</p>
 								<ul class="list">
 									<li class="list__item">
 										<div class="list__img"></div>
 										<p class="list__title">지엘(GL) 다이어트</p>
-										<p class="list__desc">정제된 탄수화물 섭취하여 혈당 수치를 조절하는 건강한 다이어트 식사법입니다.</p>
+										<p class="list__desc">정제된 탄수화물 섭취하여 혈당 수치를 조절하는<br class="only__pc"> 건강한 다이어트 식사법입니다.</p>
 									</li>
 									<li class="list__item">
 										<div class="list__img"></div>
 										<p class="list__title">211 식사법</p>
-										<p class="list__desc">채소와 단백질, 통곡물을 2:1:1 비율로 섭취하는 균형잡힌 식사방법 입니다.</p>
+										<p class="list__desc">채소와 단백질, 통곡물을 2:1:1 비율로<br class="only__pc"> 섭취하는 균형잡힌 식사방법 입니다.</p>
 									</li>
 									<li class="list__item">
 										<div class="list__img"></div>
 										<p class="list__title">지속가능 식생활 모델</p>
-										<p class="list__desc">건강과 환경을 위해 풀무원은 &lsquo;지속가능 식생활 모델&rsquo;을 제안합니다.</p>
+										<p class="list__desc">건강과 환경을 위해 풀무원은 &lsquo;지속가능 식생활<br class="only__pc"> 모델&rsquo;을 제안합니다.</p>
 									</li>
 								</ul>
 								<div class="button">
@@ -321,22 +321,22 @@
 							<div class="coverflow__box">
 								<div class="coverflow__dimmed"></div>
 								<p class="coverflow__title">바른먹거리 원칙</p>
-								<p class="coverflow__desc">나와 지구를 위한 풀무원 바른먹거리 원칙</p>
+								<p class="coverflow__desc">나와 가족의 행복을 위한<br class="only__mobile"> 건강한 약속</p>
 								<ul class="list">
 									<li class="list__item">
 										<div class="list__img"></div>
 										<p class="list__title">Nutrition Balance</p>
-										<p class="list__desc">영양균형을 고려한 식단을 지향하고, 제품을 만듭니다.</p>
+										<p class="list__desc">영양균형을 고려한 식단을 지향하고,<br class="only__pc"> 제품을 만듭니다.</p>
 									</li>
 									<li class="list__item">
 										<div class="list__img"></div>
 										<p class="list__title">Eco Caring</p>
-										<p class="list__desc">환경을 생각한 제조과정과 사업장 설계, 포장 원칙을 준수합니다.</p>
+										<p class="list__desc">환경을 생각한 제조과정과 사업장 설계,<br class="only__pc"> 포장 원칙을 준수합니다.</p>
 									</li>
 									<li class="list__item">
 										<div class="list__img"></div>
 										<p class="list__title">Clean Label</p>
-										<p class="list__desc">클린라벨을 통해 원료와 첨가물을 엄격하게 관리하고 투명하게 공개합니다.</p>
+										<p class="list__desc">클린라벨을 통해 원료와 첨가물을<br class="only__pc"> 엄격하게 관리하고 투명하게 공개합니다.</p>
 									</li>
 								</ul>
 								<div class="button">
@@ -348,12 +348,16 @@
 							<div class="coverflow__box">
 								<div class="coverflow__dimmed"></div>
 								<p class="coverflow__title">바른먹거리 캠페인</p>
-								<p class="coverflow__desc">바른먹거리의 중요성</p>
+								<p class="coverflow__desc">바른먹거리의 바른 가치를<br class="only__mobile"> 담은 이야기들</p>
 								<ul class="list">
 									<li class="list__item">
 										<div class="list__img"></div>
-										<p class="list__title">Nutrition Balance</p>
-										<p class="list__desc">어렸을 때 입맛이 평생 건강이 됩니다. 풀무원은 바른먹거리를 만드는 일 못지않게 바른 먹거리의 중요성을 널리 알리고 바른 식습관을 교육하는 일이 식품회사의 중요한 사회적 책임이라고 생각합니다. 2010년 초등학생을 대상으로 한 식품표시 교육에서부터 시작된 바른먹거리 캠페인은 이제 학부모와 교사들의 전폭적인 지지를 받으며 미취학아동, 초등학생, 성인, 시니어 교육으로까지 확대되고 있습니다. 또, 2015년부터는 &lsquo;건강에 좋은 것이 곧 환경에도 좋다&rsquo;는 풀무원의 지속가능 식생활 교육이 더해지면서 건강한 식문화 확산에 기여하고 있습니다.</p>
+										<p class="list__desc">
+											어렸을 때 입맛이 평생 건강이 됩니다. 풀무원은 바른먹거리를 만드는 일 못지않게 바른 먹거리의 중요성을 널리 알리고<br class="only__pc">
+											바른 식습관을 교육하는 일이 식품회사의 중요한 사회적 책임이라고 생각합니다. 2010년 초등학생을 대상으로 한<br class="only__pc">
+											식품표시 교육에서부터 시작된 바른먹거리 캠페인은 이제 학부모와 교사들의 전폭적인 지지를 받으며 미취학아동,<br class="only__pc">
+											초등학생, 성인, 시니어 교육으로까지 확대되고 있습니다. 또, 2015년부터는 &lsquo;건강에 좋은 것이 곧 환경에도 좋다&rsquo;는<br class="only__pc">
+											풀무원의 지속가능 식생활 교육이 더해지면서 건강한 식문화 확산에 기여하고 있습니다.</p>
 									</li>
 								</ul>
 								<div class="button">
@@ -365,12 +369,15 @@
 							<div class="coverflow__box">
 								<div class="coverflow__dimmed"></div>
 								<p class="coverflow__title">풀무원 지구식단</p>
-								<p class="coverflow__desc">더 많은 사람들이 더 맛있게 더 즐겁게</p>
+								<p class="coverflow__desc">나를 위해 지구를 위해<br class="only__mobile"> 지구식단 합니다</p>
 								<ul class="list">
 									<li class="list__item">
 										<div class="list__img"></div>
-										<p class="list__title">Nutrition Balance</p>
-										<p class="list__desc">풀무원은 식물성&middot;동물복지 식품을 핵심으로 하는 지속가능식품을 미래 성장동력으로 적극 육성하기 위해 지속가능식품 전문 브랜드 &lsquo;지구식단&rsquo;을 론칭하여 지속가능한 미래 먹거리 사업을 본격화하였습니다. 식물성 지향 식품 브랜드인 &lsquo;식물성 지구식단&rsquo;은 최소첨가물 원칙과 풀무원만의 노하우 및 특허기술을 활용하여 식물성 원료만으로 맛과 식감을 살린 제품을 선보인 브랜드입니다. 동물복지 원료를 사용한 제품을 기반으로 하는 &lsquo;동물복지 지구식단&rsquo;은 최소첨가물 원칙과 엄격한 동물복지 기준을 준수하여 건강한 맛을 구현하는 식품 브랜드입니다.</p>
+										<p class="list__desc">
+											풀무원은 식물성&middot;동물복지 식품을 핵심으로 하는 지속가능식품을 미래 성장동력으로 적극 육성하기 위해<br class="only__pc">
+											지속가능식품 전문 브랜드 &lsquo;지구식단&rsquo;을 론칭하여 지속가능한 미래 먹거리 사업을 본격화하였습니다.<br class="only__pc">
+											식물성 지향 식품 브랜드인 &lsquo;식물성 지구식단&rsquo;은 최소첨가물<br class="only__pc">
+											원칙과 엄격한 동물복지 기준을 준수하여 건강한 맛을 구현하는 식품 브랜드입니다.</p>
 									</li>
 								</ul>
 								<div class="button">
@@ -378,6 +385,10 @@
 								</div>
 							</div>
 						</div>
+					</div>
+					<div class="swiper-btnarea">
+						<div class="swiper-button-prev"></div>
+						<div class="swiper-button-next"></div>
 					</div>
 				</div>
 			</section>
