--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
 			<div class="kv__container">
 				<div class="wraping">
 					<span class="anniversary">
-						<span class="a11y">40th ANNIVERSARY FRESH MARKET</span>
+						<span class="a11y">풀무원과 함께 40th</span>
 					</span>
 					<h2 class="kv__title">
 						풀무원 40년<br>
@@ -108,12 +108,12 @@
 					<div class="intro__group">
 						<div class="intro__fruits"></div>
 						<p class="intro__title">
-							바른먹거리로 사람과지구의<br>
-							<strong>건강한 내일을 만드는 기업</strong>
+							바른먹거리로 만드는<br>
+							<strong>사람과 지구의 건강한 내일</strong>
 						</p>
 						<p class="intro__desc">
-							풀무원 정신은 스스로 일군 풀무원농장에서 유기농을 통해 이웃사랑, 생명존중을 실천하는 데<br>
-							한평생을 바쳤던 위대한 농부이자 성실한 평화주의자 원경선으로부터 시작합니다.
+							풀무원 정신은 스스로 일군 유기농 농장에서 한 평생 동안 이웃사랑, 생명존중을 실천하신<br>
+							위대한 농부 원경선 원장님으로부터 시작했습니다
 						</p>
 						<div class="button">
 							<a href="#" class="button__item button__item--secondary">풀무원 정신 자세히 보기</a>
@@ -130,15 +130,15 @@
 				<div class="prologue__circle">
 					<div class="prologue__people"></div>
 					<span class="anniversary">
-						<span class="a11y">40th ANNIVERSARY FRESH MARKET</span>
+						<span class="a11y">풀무원과 함께 40th</span>
 					</span>
 					<div class="prologue__group">
 						<p class="prologue__title">
-							조금 더 나은 세상을 향한<br>
-							풀무원의 <strong>40년의 여정</strong>
+							더 나은 세상을 만들어 온<br>
+							풀무원의 <strong>40년</strong>
 						</p>
 						<div class="button">
-							<a href="#" class="button__item button__item--primary">40주년 여정 확인하기</a>
+							<a href="#" class="button__item button__item--primary">40주년 여정 펼쳐보기</a>
 						</div>
 					</div>
 				</div>
@@ -152,7 +152,8 @@
 			<section class="wraping">
 				<header class="wraping__header">
 					<h3 class="title">Eco Caring</h3>
-					<p class="desc">풀무원은 지속가능한 지구 환경에 기여하기 위해 넷 제로(Net Zero, 탄소중립) 네이처 포지티브(Nature Positive)를 추진하여 기후 위기와 생물 다양성 위기 대응에 앞장섭니다.</p>
+					<p class="desc">풀무원은 기존보다 더 발전된 친환경 전략인 ‘친환경케어’를 실행하고 있습니다.<br>
+						온실가스, 수자원, 플라스틱 사용량 등을 줄이기 위해 ‘Net Zero’와 ‘Nature Positive’를 실천합니다.</p>
 				</header>
 				<div class="ecoCaring">
 					<div class="ecoCaring__row">
@@ -162,8 +163,7 @@
 								<div class="ecoCaring__top">
 									<h4 class="ecoCaring__title">Net Zero</h4>
 									<p class="ecoCaring__desc">
-										지구온도 상승을 1.5도 이하로 제한하기 위해<br>
-										사업 전체 범위에서 탄소를 감축하겠습니다.
+										사업 전체 영역에서 탄소 발생을 감축하여<br>지구 온도 상승을 1.5도 이하로 제한하기 위해 노력하겠습니다.
 									</p>
 								</div>
 								<div class="ecoCaring__bottom">
@@ -180,8 +180,7 @@
 								<div class="ecoCaring__top">
 									<h4 class="ecoCaring__title">Nature Positive</h4>
 									<p class="ecoCaring__desc">
-										생물 다양성을 보존하고 자연 손실을 최소화하기 위해<br>
-										지속가능한 제품・서비스를 확대해 나가겠습니다.
+										지속 가능한 제품∙서비스를 더욱 확대해나가<br>생물 다양성을 지키고 자연의 손실을 줄여가겠습니다
 									</p>
 								</div>
 								<div class="ecoCaring__bottom">
@@ -202,15 +201,15 @@
 			<section class="wraping">
 				<header class="wraping__header">
 					<h3 class="title">사회책임경영</h3>
-					<p class="desc">&lsquo;이웃사랑&rsquo;과 &lsquo;생명존중&rsquo; 정신을 바탕으로 로하스 생활(LOHAS Living)을 구현해나갑니다.</p>
+					<p class="desc">이웃사랑, 생명존중 정신으로 지속가능식생활을 구현해나갑니다.</p>
 				</header>
 				<div class="card">
 					<div class="card__scroll">
 						<div class="card__row">
 							<article class="card__item roundBox">
-								<h4 class="card__title">사회책임경영</h4>
-								<p class="card__category">LOHAS Strategy</p>
-								<p class="card__desc">풀무원은 경제적 사회적 환경적 가치 창출을 풀무원의 사회적책임으로 정의하고 끊임없는 혁신을 통해 공유가치를 창출함으로써 지속가능한 성장을 도모하겠습니다.</p>
+								<h4 class="card__title">사회책임경영 전략</h4>
+								<p class="card__category">CSR Strategy</p>
+								<p class="card__desc">경제적 가치, 사회적 가치, 환경적 가치 창출을 반드시 지켜야 할 기업의 사회적 책임으로<br class="only__mobile"> 삼고 있습니다</p>
 								<div class="lottie">
 									<lottie-player src="./assets/lottie/report.json" background="transparent" speed="1" loop autoplay>
 									</lottie-player>
@@ -218,9 +217,9 @@
 								</div>
 							</article>
 							<article class="card__item roundBox">
-								<h4 class="card__title">활동과 실적</h4>
-								<p class="card__category">Value Creation Process</p>
-								<p class="card__desc">풀무원은 사회책임경영을 통해 &lsquo;글로벌 No.1 기업&rsquo;으로 도약하겠습니다.</p>
+								<h4 class="card__title">ESG경영</h4>
+								<p class="card__category">ESG Management</p>
+								<p class="card__desc">오랜 풀무원 정신과 이를 계승한 미션, 사회책임경영을 통해 창출한 ESG 성과는 대외적으로 높게 인정 받고 있습니다.</p>
 								<div class="lottie">
 									<lottie-player src="./assets/lottie/earth.json" background="transparent" speed="1" loop autoplay>
 									</lottie-player>
@@ -228,9 +227,9 @@
 								</div>
 							</article>
 							<article class="card__item roundBox">
-								<h4 class="card__title">성과</h4>
-								<p class="card__category">Sustainable Development Goals</p>
-								<p class="card__desc">풀무원은 사회책임경영을 통해 &lsquo;글로벌 No.1 기업&rsquo;으로 도약하겠습니다.</p>
+								<h4 class="card__title">수상내역</h4>
+								<p class="card__category">List of Awards</p>
+								<p class="card__desc">사회책임경영을 통해 &lsquo;글로벌 No.1 지속가능식품 기업&rsquo;이 되겠습니다.</p>
 								<div class="lottie">
 									<lottie-player src="./assets/lottie/award.json" background="transparent" speed="1" loop autoplay>
 									</lottie-player>
@@ -244,7 +243,7 @@
 			<section class="wraping">
 				<header class="wraping__header">
 					<h3 class="title">바른먹거리</h3>
-					<p class="desc">&lsquo;가족의 건강과 행복을 위한 바른먹거리&rsquo;를 위해 스스로 세운 원칙들을 엄격히 지키고 있습니다. </p>
+					<p class="desc">나와 내 가족의 건강, 더 나아가<br class="only__mobile"> 지구환경의 건강까지<br class="only__mobile"> 두루 살핍니다.</p>
 				</header>
 				<div class="coverflow swiper">
 					<div class="swiper-wrapper">
@@ -252,8 +251,8 @@
 							<div class="coverflow__hero">
 								<div class="coverflow__inner">
 									<p>
-										바른 마음으로 바른먹거리를.<br>
-										<strong>풀무원을 만드는 사람들.</strong>
+										나와 내 가족의 건강, 더 나아가<br>
+										<strong>지구환경의 건강까지 두루 살핍니다.</strong>
 									</p>
 								</div>
 							</div>
@@ -267,29 +266,30 @@
 									<li class="list__item">
 										<div class="list__img"></div>
 										<p class="list__title">순식물성 식품</p>
-										<p class="list__desc">식물성 원료로만 구성한 식품이며 동물성 원료를<br class="only__pc"> 식물성으로 완전 대체한 식물성 식품입니다.</p>
+										<p class="list__desc">동물성 원료를 식물성으로 완전 대체한<br class="only__pc"> 100% 식물성 식품</p>
 									</li>
 									<li class="list__item">
 										<div class="list__img"></div>
 										<p class="list__title">동물복지 식품</p>
-										<p class="list__desc">육류, 조류, 달걀을 주원료로 사용한 식품으로<br class="only__pc"> 동물복지 인증 원료를 사용합니다.</p>
+										<p class="list__desc">육류, 조류, 달걀을 주원료로 한 동물복지<br class="only__pc"> 인증 원료를 사용한 식품</p>
 									</li>
 									<li class="list__item">
 										<div class="list__img"></div>
 										<p class="list__title">식물성지향 신선간편조리식</p>
-										<p class="list__desc">식물성을 지향하고 일부 동물성 원료가 포함된<br class="only__pc"> 신선간편조리식 입니다.</p>
+										<p class="list__desc">식물성을 지향하고 일부 동물성 원료가<br class="only__pc"> 포함된 신선간편조리식</p>
 									</li>
 									<li class="list__item">
 										<div class="list__img"></div>
 										<p class="list__title">지속성 해산물 식품</p>
-										<p class="list__desc">어류, 해산물 원료를 주원료로 사용한 식품으로<br class="only__pc"> ASC/MSC 인증 원료를 사용합니다.</p>
+										<p class="list__desc">어류, 해산물을 주원료로 한 ASC/MSC<br class="only__pc"> 인증 원료를 사용한 식품</p>
 									</li>
 								</ul>
 								<div class="button">
-									<a href="#" class="button__item button__item--secondary">풀무원 정신 자세히 보기</a>
+									<a href="#" class="button__item button__item--secondary">지속가능식품 더 알아 보기</a>
 								</div>
 							</div>
 						</div>
+						<!-- 0711 컨텐츠 임시 삭제 
 						<div class="swiper-slide coverflow__item">
 							<div class="coverflow__box">
 								<div class="coverflow__dimmed"></div>
@@ -317,6 +317,8 @@
 								</div>
 							</div>
 						</div>
+						-->
+
 						<div class="swiper-slide coverflow__item">
 							<div class="coverflow__box">
 								<div class="coverflow__dimmed"></div>
@@ -348,20 +350,20 @@
 							<div class="coverflow__box">
 								<div class="coverflow__dimmed"></div>
 								<p class="coverflow__title">바른먹거리 캠페인</p>
-								<p class="coverflow__desc">바른먹거리의 바른 가치를<br class="only__mobile"> 담은 이야기들</p>
+								<p class="coverflow__desc">바른먹거리의 중요성을 알리고<br class="only__mobile"> 바른 식습관을 교육합니다</p>
 								<ul class="list">
 									<li class="list__item">
 										<div class="list__img"></div>
 										<p class="list__desc">
-											어렸을 때 입맛이 평생 건강이 됩니다. 풀무원은 바른먹거리를 만드는 일 못지않게 바른 먹거리의 중요성을 널리 알리고<br class="only__pc">
-											바른 식습관을 교육하는 일이 식품회사의 중요한 사회적 책임이라고 생각합니다. 2010년 초등학생을 대상으로 한<br class="only__pc">
-											식품표시 교육에서부터 시작된 바른먹거리 캠페인은 이제 학부모와 교사들의 전폭적인 지지를 받으며 미취학아동,<br class="only__pc">
-											초등학생, 성인, 시니어 교육으로까지 확대되고 있습니다. 또, 2015년부터는 &lsquo;건강에 좋은 것이 곧 환경에도 좋다&rsquo;는<br class="only__pc">
-											풀무원의 지속가능 식생활 교육이 더해지면서 건강한 식문화 확산에 기여하고 있습니다.</p>
+											어렸을 때 입맛이 평생 건강이 됩니다. 풀무원은 바른먹거리를 만드는 일 못지않게 바른 먹거리의 중요성을 널리 알리고 <br class="only__pc">
+											바른 식습관을 교육하는 일이 식품회사의 중요한 사회적 책임이라고 생각합니다. 2010년 초등학생을 대상으로 한 <br class="only__pc">
+											식품표시 교육에서부터 시작된 바른먹거리 캠페인은 이제 학부모와 교사들의 전폭적인 지지를 받으며 <br class="only__pc">
+											미취학아동, 초등학생, 시니어 교육으로까지 확대되고 있습니다.
+										</p>
 									</li>
 								</ul>
 								<div class="button">
-									<a href="#" class="button__item button__item--secondary">바른먹거리 원칙 더 알아보기</a>
+									<a href="#" class="button__item button__item--secondary">바른먹거리 캠페인 더 알아보기</a>
 								</div>
 							</div>
 						</div>
@@ -374,14 +376,15 @@
 									<li class="list__item">
 										<div class="list__img"></div>
 										<p class="list__desc">
-											풀무원은 식물성&middot;동물복지 식품을 핵심으로 하는 지속가능식품을 미래 성장동력으로 적극 육성하기 위해<br class="only__pc">
-											지속가능식품 전문 브랜드 &lsquo;지구식단&rsquo;을 론칭하여 지속가능한 미래 먹거리 사업을 본격화하였습니다.<br class="only__pc">
-											식물성 지향 식품 브랜드인 &lsquo;식물성 지구식단&rsquo;은 최소첨가물<br class="only__pc">
-											원칙과 엄격한 동물복지 기준을 준수하여 건강한 맛을 구현하는 식품 브랜드입니다.</p>
+											풀무원은 식물성·동물복지 식품을 핵심으로 하는 지속가능식품을 미래 성장동력으로 적극 육성하기 위해 <br class="only__pc">
+											지속가능식품 전문 브랜드 &lsquo;지구식단&rsquo;을 론칭하여 지속가능한 미래 먹거리 사업을 본격화하였습니다. <br class="only__pc">
+											식물성 지향 식품 브랜드인 &lsquo;식물성 지구식단&rsquo;은 최소첨가물 원칙과 풀무원만의 노하우 및 특허기술을 활용하여 <br class="only__pc">
+											식물성 원료만으로 맛과 식감을 살린 제품을 선보인 브랜드입니다.
+										</p>
 									</li>
 								</ul>
 								<div class="button">
-									<a href="#" class="button__item button__item--secondary">바른먹거리 원칙 더 알아보기</a>
+									<a href="#" class="button__item button__item--secondary">풀무원 지구식단 더 알아보기</a>
 								</div>
 							</div>
 						</div>
@@ -395,7 +398,7 @@
 			<section class="wraping">
 				<header class="wraping__header">
 					<h3 class="title">지금 우리는</h3>
-					<p class="desc">풀무원의 다양한 소식과 생생한 뉴스를 매일 만나실 수 있습니다.</p>
+					<p class="desc">풀무원의 다양한 소식과 생생한 뉴스를<br class="only__mobile"> 매일 만나실 수 있습니다.</p>
 				</header>
 				<div class="board">
 					<div class="board__scroll">
