--- a/src/index.html
+++ b/src/index.html
@@ -85,18 +85,39 @@
 							<div class="swiper-slide swiper-no-swiping roundBox"><img src="./assets/images/img_kv_banner01_01.jpg" alt=""></div>
 							<div class="swiper-slide swiper-no-swiping roundBox"><img src="./assets/images/img_kv_banner01_02.jpg" alt=""></div>
 							<div class="swiper-slide swiper-no-swiping roundBox"><img src="./assets/images/img_kv_banner01_03.jpg" alt=""></div>
-							<div class="swiper-slide swiper-no-swiping roundBox"><img src="./assets/images/img_kv_banner01_04.jpg" alt=""></div>
+							<div class="swiper-slide swiper-no-swiping roundBox">
+								<div class="lottie">
+									<lottie-player src="./lottie/earth1.json" style="width: 100%; height: 100%;" background="#F2F2F2" speed="1" loop autoplay>
+									</lottie-player>
+								</div>
+							</div>
 							<div class="swiper-slide swiper-no-swiping roundBox"><img src="./assets/images/img_kv_banner01_05.jpg" alt=""></div>
 							<div class="swiper-slide swiper-no-swiping roundBox"><img src="./assets/images/img_kv_banner01_06.jpg" alt=""></div>
+							<div class="swiper-slide swiper-no-swiping roundBox"><img src="./assets/images/img_kv_banner01_07.jpg" alt=""></div>
 						</div>
 					</div>
 					<div class="kv__swiper swiper" dir="rtl">
 						<div class="swiper-wrapper">
-							<div class="swiper-slide swiper-no-swiping roundBox"><img src="./assets/images/img_kv_banner02_01.jpg" alt=""></div>
-							<div class="swiper-slide swiper-no-swiping roundBox"><img src="./assets/images/img_kv_banner02_02.jpg" alt=""></div>
+							<div class="swiper-slide swiper-no-swiping roundBox">
+								<div class="lottie">
+									<lottie-player src="./lottie/water.json" style="width: 100%; height: 100%;" background="#66CAFF" speed="1" loop autoplay>
+									</lottie-player>
+								</div>
+							</div>
+							<div class="swiper-slide swiper-no-swiping roundBox">
+								<div class="lottie">
+									<lottie-player src="./lottie/box.json" style="width: 100%; height: 100%;" background="#F2F2F2" speed="1" loop autoplay>
+									</lottie-player>
+								</div>
+							</div>
 							<div class="swiper-slide swiper-no-swiping roundBox"><img src="./assets/images/img_kv_banner02_03.jpg" alt=""></div>
 							<div class="swiper-slide swiper-no-swiping roundBox"><img src="./assets/images/img_kv_banner02_04.jpg" alt=""></div>
-							<div class="swiper-slide swiper-no-swiping roundBox"><img src="./assets/images/img_kv_banner02_05.jpg" alt=""></div>
+							<div class="swiper-slide swiper-no-swiping roundBox">
+								<div class="lottie">
+									<lottie-player src="./lottie/heart.json" style="width: 100%; height: 100%;" background="#F2F2F2" speed="1" direction="-1" loop autoplay>
+									</lottie-player>
+								</div>
+							</div>
 							<div class="swiper-slide swiper-no-swiping roundBox"><img src="./assets/images/img_kv_banner02_06.jpg" alt=""></div>
 							<div class="swiper-slide swiper-no-swiping roundBox"><img src="./assets/images/img_kv_banner02_07.jpg" alt=""></div>
 						</div>
@@ -211,7 +232,7 @@
 								<p class="card__category">CSR Strategy</p>
 								<p class="card__desc">경제적 가치, 사회적 가치, 환경적 가치 창출을 반드시 지켜야 할 기업의 사회적 책임으로<br class="only__mobile"> 삼고 있습니다</p>
 								<div class="lottie">
-									<lottie-player src="./assets/lottie/report.json" background="transparent" speed="1" loop autoplay>
+									<lottie-player src="./lottie/report.json" background="transparent" speed="1" loop autoplay>
 									</lottie-player>
 									<!-- <img src="./assets/images/dummy/@ecocaring01.png" alt="" style="width: 100%; height: 100%;"> -->
 								</div>
@@ -221,7 +242,7 @@
 								<p class="card__category">ESG Management</p>
 								<p class="card__desc">오랜 풀무원 정신과 이를 계승한 미션, 사회책임경영을 통해 창출한 ESG 성과는 대외적으로 높게 인정 받고 있습니다.</p>
 								<div class="lottie">
-									<lottie-player src="./assets/lottie/earth.json" background="transparent" speed="1" loop autoplay>
+									<lottie-player src="./lottie/earth.json" background="transparent" speed="1" loop autoplay>
 									</lottie-player>
 									<!-- <img src="./assets/images/dummy/@ecocaring02.png" alt="" style="width: 100%; height: 100%;"> -->
 								</div>
@@ -231,7 +252,7 @@
 								<p class="card__category">List of Awards</p>
 								<p class="card__desc">사회책임경영을 통해 &lsquo;글로벌 No.1 지속가능식품 기업&rsquo;이 되겠습니다.</p>
 								<div class="lottie">
-									<lottie-player src="./assets/lottie/award.json" background="transparent" speed="1" loop autoplay>
+									<lottie-player src="./lottie/award.json" background="transparent" speed="1" loop autoplay>
 									</lottie-player>
 									<!-- <img src="./assets/images/dummy/@ecocaring03.png" alt="" style="width: 100%; height: 100%;"> -->
 								</div>
