--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@
 							위대한 농부 원경선 원장님으로부터 시작했습니다
 						</p>
 						<div class="button">
-							<a href="#" class="button__item button__item--secondary">풀무원 정신 자세히 보기</a>
+							<a href="/pulmuone/company/viewValue.do" class="button__item button__item--secondary">풀무원 정신 자세히 보기</a>
 						</div>
 					</div>
 				</div>
@@ -159,7 +159,7 @@
 							풀무원의 <strong>40년</strong>
 						</p>
 						<div class="button">
-							<a href="#" class="button__item button__item--primary">40주년 여정 펼쳐보기</a>
+							<a href="pulmuone/the40thAnniversary/index.html" class="button__item button__item--primary" title="new tab" target="_blank">40주년 여정 펼쳐보기</a>
 						</div>
 					</div>
 				</div>
@@ -306,7 +306,7 @@
 									</li>
 								</ul>
 								<div class="button">
-									<a href="#" class="button__item button__item--secondary">지속가능식품 더 알아 보기</a>
+									<a href="/pulmuone/foodnlohas/viewLohasfood.do" class="button__item button__item--secondary">지속가능식품 더 알아 보기</a>
 								</div>
 							</div>
 						</div>
@@ -363,7 +363,7 @@
 									</li>
 								</ul>
 								<div class="button">
-									<a href="#" class="button__item button__item--secondary">바른먹거리 원칙 더 알아보기</a>
+									<a href="/pulmuone/foodnlohas/viewFood.do" class="button__item button__item--secondary">바른먹거리 원칙 더 알아보기</a>
 								</div>
 							</div>
 						</div>
@@ -384,7 +384,7 @@
 									</li>
 								</ul>
 								<div class="button">
-									<a href="#" class="button__item button__item--secondary">바른먹거리 캠페인 더 알아보기</a>
+									<a href="/pulmuone/foodnlohas/viewCampaign.do" class="button__item button__item--secondary">바른먹거리 캠페인 더 알아보기</a>
 								</div>
 							</div>
 						</div>
@@ -405,7 +405,7 @@
 									</li>
 								</ul>
 								<div class="button">
-									<a href="#" class="button__item button__item--secondary">풀무원 지구식단 더 알아보기</a>
+									<a href="/pulmuone/event/foodevent2.do" class="button__item button__item--secondary">풀무원 지구식단 더 알아보기</a>
 								</div>
 							</div>
 						</div>
@@ -526,7 +526,7 @@
 							</li>
 						</ul>
 						<div class="button">
-							<button type="button" class="button__item">더보기</button>
+							<a href="https://news.pulmuone.co.kr/" class="button__item">더보기</a>
 						</div>
 					</div>
 				</div>
